Making colour a required type
